--- a/book_25.tex
+++ b/book_25.tex
@@ -24,7 +24,7 @@
 
 \fancyhead[RO]{\large \textsl {\textbf{93}}} 
 \fancyhead[LO]{\large \textsl{5.4 Successive approximation: How deep is the well?}} 
-\[\large t_{1}=T-\frac{h_{0}}{c_{s}}\approx 3.76s.\eqno{(5.38)}\] 
+\[\Large t_{1}=T-\frac{h_{0}}{c_{s}}\approx 3.76s.\eqno{(5.38)}\] 
 \Large \textrm{In that time, the rock falls a distanc $gt^{2}/2$, so the next approximation to the depth is} 
 \[\Large h_{1}=\frac{1}{2}gt_{1}^{2}\approx 70.87m.\eqno{(5.39)}\] 
 \large\textsl{Is this approximate depth an overestimate or underestimate? How accurate is it?} \\ 
