--- a/book_25.tex
+++ b/book_25.tex
@@ -79,7 +79,7 @@ form. The four quantities h, g, T, and $c_{s}$
 produce two independent dimensionless 
 groups (Section 2.4.1). An intuitively reasonable pair are} \\ 
 \\ 
-\[\bar{h}\equiv \frac{h}{gT^{2}} \qquad and \qquad \bar{T}\equiv \frac{gT}{c_{s}} \eqno{(5.40)}\] \\ 
+\[\bar{h}\equiv \frac{h}{gT^{2}} \qquad and \qquad \bar{T}\equiv \frac{gT}{c_{s}} .\eqno{(5.40)}\] \\ 
 \textrm{ 
 a. What is a physical interpretation of $\bar{T}$?\\ 
 b. With two groups, the general dimensionless form is $\bar{h}$ = f($\bar{T}$). What is $\bar{h}$ in 
@@ -147,7 +147,7 @@ these endpoints are far outside the region where $\cot t \approx 1-t^{2}/2$ is a
 accurate approximation. Fortunately, this issue contributes only a tiny 
 error (Problem 5.35). Ignoring this error turns the original integral into a 
 Gaussian integral with finite limits: } 
-\[\int_{-\pi /2}^{\pi /2}(\cos t)^{100}dt \approx \int_{-\pi /2}^{\pi /2} e ^{-50t^{2}}dt\eqno{(5.47)}\] 
+\[\int_{-\pi /2}^{\pi /2}(\cos t)^{100}dt \approx \int_{-\pi /2}^{\pi /2} e ^{-50t^{2}}dt .\eqno{(5.47)}\] 
 
 %************************************************************************************* 
 %*********************************************************************************** 
@@ -163,7 +163,7 @@ Gaussian integral with finite limits: }
 \Large\textrm{Unfortunately, with finite limits the integral has no closed form. But 
 extending the limits to infinity produces a closed form while contributing 
 almost no error (Problem 5.36). The approximation chain is now } 
-\[\int_{-\pi /2}^{\pi /2}(\cos t)^{100}dt \approx \int_{-\pi /2}^{\pi /2} e ^{-50t^{2}}dt \approx \int_{-\infty }^{\infty } e ^{-50t^{2}}dt \eqno{(5.48)}\] \\ 
+\[\int_{-\pi /2}^{\pi /2}(\cos t)^{100}dt \approx \int_{-\pi /2}^{\pi /2} e ^{-50t^{2}}dt \approx \int_{-\infty }^{\infty } e ^{-50t^{2}}dt. \eqno{(5.48)}\] \\ 
 
 \large\textrm{\textbf{Problem 5.35 Using the original limits} \\ 
 The approximation $\cot t \approx 1-t^{2}/2$ requires that t be small. Why doesn’t using 
@@ -181,14 +181,14 @@ For comparison, the exact integral is (Problem 5.41)
 \[\int_{-\pi /2}^{\pi /2}(\cos t)^{100}dt=2^{-n}\begin{pmatrix} 
 n \\ 
 n/2 
-\end{pmatrix} \pi \eqno{(5.49)} \] \\ 
+\end{pmatrix} \pi . \eqno{(5.49)} \] \\ 
 \Large\textrm{When n = 100, the binomial coefficient and power of two produce} \\ 
 \[\large \frac{12611418068195524166851562157}{158456325028528675187087900672}\pi \approx 0.25003696348037. \eqno{(5.50)}\] \\ 
 \Large\textrm{Our 5-minute, within-5\% estimate of 0.25 is accurate to almost 0.01\%!} \\ 
 \\
 \large\textrm{\textbf{Problem 5.37 Sketching the approximations} \\  
 Plot $(\cos t)^{100}$ and its two approximations $ e ^{-50t^{2}}$ 
-and 1 $-50t^{2}$} \\ 
+and 1 $-50t^{2}$.} \\ 
 \\ 
 \large\textrm{\textbf{Problem 5.38 Simplest approximation} \\ 
 \\ 
