--- a/m4_latex/book_25.tex
+++ b/m4_latex/book_25.tex
@@ -134,7 +134,9 @@ $\cot t \approx 1-t^{2}/2$ (Problem 5.20), so the integrand is roughly}
 \Large\textrm{It has the familiar form $(1 + z)^{n}$, with fractional change $z = −t^{2}/2$ and 
 exponent n = 100. When t is small, $z = −t^{2}/2$ is tiny, so $(1 + z)^{n}$ may be 
 approximated using the results of Section 5.3.4:} 
-\[(1+z)^{n}\approx \left\{\begin{matrix} 1+nz & (z\ll 1 \quad and \quad nz\ll 1) & \\ e ^{nz}& (z\ll 1 \quad and \quad nz \quad unrestricted) .& \end{matrix}\right. \eqno{(5.45)}\] 
+\begin{flushleft}
+$$ (1+z)^{n}\approx \left\{\begin{matrix} 1+nz &  (z\ll 1) \quad \textrm{and} \quad nz\ll 1 &\\ e ^{nz}& (z\ll 1 \quad \textrm{and} \quad nz \quad \textrm{unrestricted}) .& \end{matrix}\right. \eqno{(5.45)} $$
+\end{flushleft}
 \Large \textrm{Because the exponent $n$ is large, $nz$ can be large even when $t$ and $z$ are 
 small. Therefore, the safest approximation is $(1 + z)^{n}\approx e ^{nz}$; then} 
 \[(\cos t)^{100}\approx \left (1- \frac{t^{2}}{2} \right )^{100} \approx e ^{-50t^{2}} . \eqno{(5.46)}\] 
