--- a/m4_latex/book_25.tex
+++ b/m4_latex/book_25.tex
@@ -15,7 +15,7 @@
 \usepackage[colorlinks=true, allcolors=blue]{hyperref} 
 \usepackage{setspace} 
 \setcounter{chapter}{5}
-\setcounter{section}{3}
+\setcounter{section}{4}
 \setlength{\headheight}{14pt}
 \newcounter{pro1}
 \setcounter{pro1}{30}
@@ -46,12 +46,14 @@ $h_{0}$ overestimates the depth, the procedure overestimates the sound-travel
 time and, by the same amount, underestimates the free-fall time. Thus 
 h1 underestimates the depth. Indeed, $h_{1}$ is slightly smaller than the true 
 depth of roughly 71.56 m—but by only 1.3\% .} \\ 
+\\
 \Large\textrm{The method of successive approximation has several advantages over solving the quadratic formula exactly. First, it helps us develop a physical 
 understanding of the system; we realize, for example, that most of the 
 T = 4 s is spent in free fall, so the depth is roughly $gT^{2}/2$. Second, it 
 has a pictorial explanation (Problem 5.34). Third, it gives a sufficiently 
 accurate answer quickly. If you want to know whether it is safe to jump 
 into the well, why calculate the depth to three decimal places?} \\ 
+\\
 \Large\textrm{Finally, the method can handle small changes in the model. Maybe the 
 speed of sound varies with depth, or air resistance becomes important 
 (Problem 5.32). Then the brute-force, quadratic-formula method fails. The 
@@ -61,6 +63,7 @@ have no closed-form solution. Therefore, a small change to a solvable
 model usually produces an intractable model—if we demand an exact 
 answer. The method of successive approximation is a robust alternative 
 that produces low-entropy, comprehensible solutions .} \\ 
+\\
 \colorbox{light-gray}{
 \begin{minipage}{\textwidth}
 \large\textrm{ \textbf{ \textbf\pro Parameter-value inaccuracies}\\ 
@@ -110,8 +113,8 @@ doubled? If g doubled?}
 \end{minipage}}
 \\
 \\
-\Large\textrm{ \textbf{5.5 Daunting trigonometric integral}\\ 
-\\ 
+\section{ \textbf{Daunting trigonometric integral}}
+\Large\textrm{ 
 The final example of taking out the big part is to estimate a daunting 
 trigonometric integral that I learned as an undergraduate. My classmates 
 and I spent many late nights in the physics library solving homework 
