--- a/m4_latex/book_25.tex
+++ b/m4_latex/book_25.tex
@@ -33,6 +33,7 @@
 
 \fancyhead[RO]{\large \textsl {\textbf{93}}} 
 \fancyhead[LO]{\large \textsl{5.4 Successive approximation: How deep is the well?}} 
+\Large
 \begin{equation} 
 \Large t_{1}=T-\frac{h_{0}}{c_{s}}\approx 3.76s.
 \end{equation} 
