--- a/m4_latex/book_25.tex
+++ b/m4_latex/book_25.tex
@@ -175,7 +175,7 @@ accurate approximation. Fortunately, this issue contributes only a tiny
 error (Problem 5.35). Ignoring this error turns the original integral into a 
 Gaussian integral with finite limits: } 
 \begin{equation}
-\int_{-\pi /2}^{\pi /2}(\cos t)^{100}dt \approx \int_{-\pi /2}^{\pi /2} e ^{-50t^{2}}dt
+\int_{-\pi /2}^{\pi /2}(\cos t)^{100}dt \approx \int_{-\pi /2}^{\pi /2} e ^{-50t^{2}}dt .
 \end{equation}
 
 
