--- a/m4_latex/book_25.tex
+++ b/m4_latex/book_25.tex
@@ -45,7 +45,7 @@
 \Large \textrm{The calculation of $h_{1}$ used $h_{0}$ to estimate the sound-travel time. Because 
 $h_{0}$ overestimates the depth, the procedure overestimates the sound-travel 
 time and, by the same amount, underestimates the free-fall time. Thus 
-h1 underestimates the depth. Indeed, $h_{1}$ is slightly smaller than the true 
+$h_{1}$  underestimates the depth. Indeed, $h_{1}$ is slightly smaller than the true 
 depth of roughly 71.56 m—but by only 1.3\% .} \\ 
 \\
 \Large\textrm{The method of successive approximation has several advantages over solving the quadratic formula exactly. First, it helps us develop a physical 
@@ -89,7 +89,7 @@ $h_{1}$ and in the second approximation $h_{2}$ (Problem 5.31).} \\
 \begin{minipage}{\textwidth}
 \large\textrm{\textbf{\pro Dimensionless form of the well-depth analysis} \\ 
 Even the messiest results are cleaner and have lower entropy in dimensionless 
-form. The four quantities h, g, T, and $c_{s}$
+form. The four quantities $h$, $g$, $T$, and $c_{s}$
 produce two independent dimensionless 
 groups (Section 2.4.1). An intuitively reasonable pair are} \\ 
 \\ 
@@ -145,7 +145,7 @@ help. The usually helpful identity $(\cos t)^{2}=(\cos 2t -1)/2$ produces only}
 (\cos t)^{100}=\left ( \frac{\cos 2t-1}{2} \right )^{50} , 
 \end{equation}
 
-\Large \textrm{which becomes a trigonometric monster upon expanding the 50th power. 
+\Large \textrm{which becomes a trigonometric monster upon expanding the $50th$ power. 
 A clue pointing to a simpler method is that 5\% accuracy is sufficient—so, 
 find the big part! The integrand is largest when t is near zero. There,
 $\cot t \approx 1-t^{2}/2$ (Problem 5.20), so the integrand is roughly}
@@ -153,7 +153,7 @@ $\cot t \approx 1-t^{2}/2$ (Problem 5.20), so the integrand is roughly}
 (\cos t)^{100}\approx \left (1- \frac{t^{2}}{2} \right )^{100} . 
 \end{equation}
 \Large\textrm{It has the familiar form $(1 + z)^{n}$, with fractional change $z = −t^{2}/2$ and 
-exponent n = 100. When t is small, $z = −t^{2}/2$ is tiny, so $(1 + z)^{n}$ may be 
+exponent $n = 100$. When t is small, $z = −t^{2}/2$ is tiny, so $(1 + z)^{n}$ may be 
 approximated using the results of Section 5.3.4:}
 \begin{flushleft}
 \begin{equation}
@@ -166,7 +166,7 @@ small. Therefore, the safest approximation is $(1 + z)^{n}\approx e ^{nz}$; then
 (\cos t)^{100}\approx \left (1- \frac{t^{2}}{2} \right )^{100} \approx e ^{-50t^{2}} .
 \end{equation}
 \Large\textrm{A cosine raised to a high power becomes a Gaussian! 
-As a check on this surprising conclusion, computergenerated plots of $(\cos t)^{n}$ for n = 1...5 show a 
+As a check on this surprising conclusion, computergenerated plots of $(\cos t)^{n}$ for $n = 1...5$ show a 
 Gaussian bell shape taking form as n increases. \\
 Even with this graphical evidence, replacing $(\cos t)^{100}$ by a Gaussian is a 
 bit suspicious. In the original integral, t ranges from $-\pi /2$ to $\pi /2$ , and 
@@ -198,7 +198,7 @@ almost no error (Problem 5.36). The approximation chain is now }
 \colorbox{light-gray}{
 \begin{minipage}{\textwidth}
 \large\textrm{\textbf{\pro Using the original limits} \\ 
-The approximation $\cot t \approx 1-t^{2}/2$ requires that t be small. Why doesn’t using 
+The approximation $\cot t \approx 1-t^{2}/2$ requires that $t$ be small. Why doesn’t using 
 the approximation outside the small-t range contribute a significant error?} \\ 
 
 \textrm{\textbf{\pro Extending the limits} \\ 
@@ -216,7 +216,7 @@ n \\
 n/2 
 \end{pmatrix} \pi .  
 \end{equation} 
-\Large\textrm{When n = 100, the binomial coefficient and power of two produce} \\ 
+\Large\textrm{When $n = 100$, the binomial coefficient and power of two produce} \\ 
 \begin{equation}
 \large \frac{12611418068195524166851562157}{158456325028528675187087900672}\pi \approx 0.25003696348037. \end{equation}  \\ 
 \Large\textrm{Our 5-minute, within-5\% estimate of 0.25 is accurate to almost 0.01\%!} \\ 
@@ -230,7 +230,7 @@ and 1 $-50t^{2}$.} \\
 Use the linear fractional-change approximation $(1 − t^{2}/2)^{100} \approx 1 − 50t^{2}$ to 
 approximate the integrand; then integrate it over the range where $1 − 50t^{2}$ is 
 positive. How close is the result of this 1-minute method to the exact value 
-0.2500 . . .?} \\ 
+$0.2500 . . .$?} \\ 
 \\ 
 \large\textrm{\textbf{\pro Huge exponent} \\ 
 \\ 
