--- a/m4_latex/book_25.tex
+++ b/m4_latex/book_25.tex
@@ -46,7 +46,7 @@
 $h_{0}$ overestimates the depth, the procedure overestimates the sound-travel 
 time and, by the same amount, underestimates the free-fall time. Thus 
 $h_{1}$  underestimates the depth. Indeed, $h_{1}$ is slightly smaller than the true 
-depth of roughly 71.56 m—but by only 1.3\% .} \\ 
+depth of roughly $71.56 m$—but by only 1.3\% .} \\ 
 \\
 \Large\textrm{The method of successive approximation has several advantages over solving the quadratic formula exactly. First, it helps us develop a physical 
 understanding of the system; we realize, for example, that most of the 
@@ -103,14 +103,14 @@ c. Rewrite the quadratic-formula solution} \\
 \textrm{as $\bar{h}$= f($\bar{T}$). Then check that f($\bar{T}$) behaves correctly in the easy case $\bar{T}$ $\rightarrow $ 0} \\ 
 \\ 
 \large\textrm{\textbf{\pro Spacetime diagram of the well depth} \\ 
-How does the spacetime diagram [44] illustrate 
+How does the spacetime diagram $[44]$ illustrate 
 the successive approximation of the well depth? 
 On the diagram, mark $h_{0}$ (the zeroth approximation to the depth), $h_{1}$ , and the exact depth 
-h. Mark $t_{0}$ , the zeroth approximation to the 
+$h$. Mark $t_{0}$ , the zeroth approximation to the 
 free-fall time. Why are portions of the rock and 
 sound-wavefront curves dotted? How would 
 you redraw the diagram if the speed of sound 
-doubled? If g doubled?}
+doubled? If $g$ doubled?}
 \end{minipage}}
 \\
 \\
@@ -147,13 +147,13 @@ help. The usually helpful identity $(\cos t)^{2}=(\cos 2t -1)/2$ produces only}
 
 \Large \textrm{which becomes a trigonometric monster upon expanding the $50th$ power. 
 A clue pointing to a simpler method is that 5\% accuracy is sufficient—so, 
-find the big part! The integrand is largest when t is near zero. There,
+find the big part! The integrand is largest when $t$ is near zero. There,
 $\cot t \approx 1-t^{2}/2$ (Problem 5.20), so the integrand is roughly}
 \begin{equation}
 (\cos t)^{100}\approx \left (1- \frac{t^{2}}{2} \right )^{100} . 
 \end{equation}
 \Large\textrm{It has the familiar form $(1 + z)^{n}$, with fractional change $z = −t^{2}/2$ and 
-exponent $n = 100$. When t is small, $z = −t^{2}/2$ is tiny, so $(1 + z)^{n}$ may be 
+exponent $n = 100$. When $t$ is small, $z = −t^{2}/2$ is tiny, so $(1 + z)^{n}$ may be 
 approximated using the results of Section 5.3.4:}
 \begin{flushleft}
 \begin{equation}
@@ -167,9 +167,9 @@ small. Therefore, the safest approximation is $(1 + z)^{n}\approx e ^{nz}$; then
 \end{equation}
 \Large\textrm{A cosine raised to a high power becomes a Gaussian! 
 As a check on this surprising conclusion, computergenerated plots of $(\cos t)^{n}$ for $n = 1...5$ show a 
-Gaussian bell shape taking form as n increases. \\
+Gaussian bell shape taking form as $n$ increases. \\
 Even with this graphical evidence, replacing $(\cos t)^{100}$ by a Gaussian is a 
-bit suspicious. In the original integral, t ranges from $-\pi /2$ to $\pi /2$ , and 
+bit suspicious. In the original integral, $t$ ranges from $-\pi /2$ to $\pi /2$ , and 
 these endpoints are far outside the region where $\cot t \approx 1-t^{2}/2$ is an 
 accurate approximation. Fortunately, this issue contributes only a tiny 
 error (Problem 5.35). Ignoring this error turns the original integral into a 
