--- a/m4_latex/book_25.tex
+++ b/m4_latex/book_25.tex
@@ -46,7 +46,7 @@
 $h_{0}$ overestimates the depth, the procedure overestimates the sound-travel 
 time and, by the same amount, underestimates the free-fall time. Thus 
 $h_{1}$  underestimates the depth. Indeed, $h_{1}$ is slightly smaller than the true 
-depth of roughly $71.56 m$—but by only 1.3\% .} \\ 
+depth of roughly $71.56 m$—but by only $1.3\%$ .} \\ 
 \\
 \Large\textrm{The method of successive approximation has several advantages over solving the quadratic formula exactly. First, it helps us develop a physical 
 understanding of the system; we realize, for example, that most of the 
@@ -138,7 +138,7 @@ problem is to evaluate}\\
 
 \fancyhead[RO]{\large \textsl {\textbf{95}}} 
 \fancyhead[LO]{\large \textsl{5.5 Daunting trigonometric integral}} 
-\Large\textrm{to within 5 \% in less than 5 min without using a calculator or computer!\\ 
+\Large\textrm{to within $5\%$ in less than 5 min without using a calculator or computer!\\ 
 That $(\cos t)^{100}$ looks frightening. Most trigonometric identities do not 
 help. The usually helpful identity $(\cos t)^{2}=(\cos 2t -1)/2$ produces only} 
 \begin{equation}
@@ -146,7 +146,7 @@ help. The usually helpful identity $(\cos t)^{2}=(\cos 2t -1)/2$ produces only}
 \end{equation}
 
 \Large \textrm{which becomes a trigonometric monster upon expanding the $50th$ power. 
-A clue pointing to a simpler method is that 5\% accuracy is sufficient—so, 
+A clue pointing to a simpler method is that $5\%$ accuracy is sufficient—so, 
 find the big part! The integrand is largest when $t$ is near zero. There,
 $\cot t \approx 1-t^{2}/2$ (Problem 5.20), so the integrand is roughly}
 \begin{equation}
@@ -206,8 +206,8 @@ Why doesn’t extending the integration limits from $\pm\pi /2$ to $\pm\infty$ c
 significant error?} \\ 
  \end{minipage}}
 \Large\textrm{The last integral is an old friend (Section 2.1):$\int_{-\infty}^{\infty} e^{-\alpha t^{2}} dt =\sqrt{\pi /\alpha }$. With 
-$\alpha$ = 50, the integral becomes $\pi$/50. Conveniently, 50 is roughly 16$\pi$, so 
-the square root—and our 5\% estimate—is roughly 0.25. 
+$\alpha = 50$, the integral becomes $\pi$/50. Conveniently, 50 is roughly 16$\pi$, so 
+the square root—and our $5\%$ estimate—is roughly 0.25. 
 For comparison, the exact integral is (Problem 5.41) 
 } 
 \begin{equation}
@@ -219,7 +219,7 @@ n/2
 \Large\textrm{When $n = 100$, the binomial coefficient and power of two produce} \\ 
 \begin{equation}
 \large \frac{12611418068195524166851562157}{158456325028528675187087900672}\pi \approx 0.25003696348037. \end{equation}  \\ 
-\Large\textrm{Our 5-minute, within-5\% estimate of 0.25 is accurate to almost 0.01\%!} \\ 
+\Large\textrm{Our 5-minute, within-5\% estimate of $0.25$ is accurate to almost $0.01\%$!} \\ 
 \colorbox{light-gray}{
 \begin{minipage}{\textwidth}
 
